# kestrel

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
clients/python/: README.md  pyproject.toml  smoke.py
clients/python/src/kestrel_client/: __init__.py  _async_client.py  _client.py  _exceptions.py  _models.py
clients/python/tests/: conftest.py  test_async_client.py  test_sync_client.py
docker/api/: Dockerfile  entrypoint.sh
docker/executor/: Dockerfile  kernel.py
docs/: api.md  architecture.md  deployment.md  publishing.md
docs/examples/: README.md  anthropic_tool_use.py  langchain_tool.py  openai_function_calling.py  requirements.txt
scripts/: try_execute.py
src/kestrel/: api_keys.py  app.py  audit.py  config.py  logging.py  observability.py  rate_limit.py
src/kestrel/api/: admin.py  auth.py  routes.py  schemas.py  sessions.py  sessions_polling.py  sessions_stream.py
src/kestrel/cli/: __init__.py  keys.py
src/kestrel/db/: __init__.py  models.py  queries.py  session.py
src/kestrel/db/migrations/: env.py  script.py.mako
src/kestrel/db/migrations/versions/: 20260525_0001_audit_events.py  20260525_0002_api_keys.py
src/kestrel/execution/: __init__.py  docker_executor.py  manager.py  protocol.py  redis_session_registry.py  session_registry.py  session_runtime.py
tests/: conftest.py
tests/integration/: test_admin_routes.py  test_api_key_auth.py  test_api_key_store.py  test_audit_emit.py  test_audit_postgres.py  test_audit_scaffolding.py  test_execute.py  test_isolation.py  test_keys_cli.py  test_metrics.py  test_rate_limit.py  test_rate_limit_http.py  test_redis_session_registry.py  test_request_id.py  test_session_registry.py  test_session_runtime.py  test_sessions_http.py  test_sessions_polling.py  test_sessions_stream.py
