[project]
name = "kestrel"
version = "0.1.0"
description = "Self-hosted, sandboxed Python code execution service."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Kestrel maintainers" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "redis[hiredis]>=5.0",
    "prometheus-client>=0.20",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Phase 6 substep 7: silence the benign PytestUnraisableExceptionWarning from
# asyncio's BaseSubprocessTransport.__del__. Its finalizer runs after
# pytest-asyncio has closed the per-test event loop and fails a loop-bound
# pipe cleanup ("Event loop is closed"). All docker/subprocess children are
# explicitly awaited (proc.wait()) and the OS closes their FDs on exit, so
# nothing leaks — only the late finalizer is noisy. Kestrel defines no
# __del__/finalizers of its own, so this category is unambiguous here.
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]