[project]
name = "kestrel-client"
version = "0.8.0"
description = "Python client SDK for Kestrel — a sandboxed Python code execution service."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kestrel maintainers" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
