[project]
name = "kestrel-client"
version = "0.8.0"
description = "Python client SDK for Kestrel — a sandboxed Python code execution service."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kestrel maintainers" }]
keywords = ["kestrel", "code-execution", "sandbox", "llm", "sdk", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[project.urls]
Homepage = "https://github.com/Khan-Easa/kestrel"
Repository = "https://github.com/Khan-Easa/kestrel"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
